--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,23 +1,25 @@
 [package]
 name = "gui-tools"
-version = "0.1.0"
+version = "0.0.1"
 authors = ["not_a_seagull <jtnunley01@gmail.com>"]
 edition = "2018"
 
 [dependencies]
+ahash = "0.4.4"
 async-trait = { version = "0.1.38", optional = true }
 cty = { version = "0.2.1" }
 crossbeam-queue = { version = "0.2.3", optional = true }
-cstr_core = { version = "0.2.2", features = ["nightly"] }
-euclid = { version = "0.22.0", default-features = false }
+euclid = { version = "0.22.0", features = ["libm"], default-features = false }
 futures-lite = { version = "0.1.10", optional = true }
 hashbrown = { version = "0.8.2", optional = true }
 log = "0.4.11"
+num-traits = { version = "0.2.12", default-features = false }
 parking_lot = { version = "0.11.0", features = ["nightly", "deadlock_detection"], optional = true }
+ordered-float = "2.0.0"
 owning_ref = "0.4.1"
 spinning_top = { version = "0.2.2", features = ["nightly", "owning_ref"] }
 spinny = { version = "0.2.0", features = ["nightly", "owning_ref"] }
-storagevec = { version = "0.1.1", default-features = false }
+storagevec = { version = "0.1.2", default-features = false }
 tokio = { version = "0.2.22", features = ["rt-core"], optional = true }
 
 [dev-dependencies]
@@ -37,4 +39,4 @@ default = ["std"]
 alloc = ["hashbrown", "storagevec/alloc"]
 async = ["std", "async-trait", "futures-lite", "tokio"]
 pl = ["std", "parking_lot"]
-std = ["alloc", "euclid/std", "crossbeam-queue"]
+std = ["alloc", "euclid/std", "crossbeam-queue", "num-traits/std"]
