--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,8 +7,9 @@ edition = "2018"
 [dependencies]
 ahash = "0.4.4"
 async-trait = { version = "0.1.38", optional = true }
-cty = { version = "0.2.1" }
+conquer-once = { version = "0.2.1", default-features = false }
 crossbeam-queue = { version = "0.2.3", optional = true }
+cty = { version = "0.2.1" }
 euclid = { version = "0.22.0", features = ["libm"], default-features = false }
 futures-lite = { version = "0.1.10", optional = true }
 hashbrown = { version = "0.8.2", optional = true }
@@ -23,7 +24,6 @@ storagevec = { version = "0.1.4", default-features = false }
 tokio = { version = "0.2.22", features = ["rt-core"], optional = true }
 
 [dev-dependencies]
-conquer-once = "0.2.1"
 env_logger = "0.7.1"
 
 [target.'cfg(target_os = "linux")'.dependencies.x11nas]
@@ -40,4 +40,4 @@ default = ["std"]
 alloc = ["hashbrown", "storagevec/alloc"]
 async = ["std", "async-trait", "futures-lite", "tokio"]
 pl = ["std", "parking_lot"]
-std = ["alloc", "euclid/std", "crossbeam-queue", "num-traits/std"]
+std = ["alloc", "euclid/std", "conquer-once/std", "crossbeam-queue", "num-traits/std"]
