--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,7 +20,7 @@ ordered-float = "2.0.0"
 owning_ref = "0.4.1"
 spinning_top = { version = "0.2.2", features = ["nightly", "owning_ref"] }
 spinny = { version = "0.2.0", features = ["nightly", "owning_ref"] }
-storagevec = { version = "0.1.4", default-features = false }
+storagevec = { version = "0.1.5", default-features = false }
 tokio = { version = "0.2.22", features = ["rt-core"], optional = true }
 
 [dev-dependencies]
@@ -31,8 +31,12 @@ version = "2.19.0"
 features = ["xlib"]
 default-features = false
 
+[build-dependencies]
+cc = "1.0.60"
+
 [target.'cfg(windows)'.dependencies.winapi]
-version = "0.3.9"
+git = "https://github.com/Jarcho/winapi-rs"
+branch = "gdiplus"
 features = ["libloaderapi", "minwindef", "windef", "errhandlingapi", "winuser", "ntdef", "windowsx"]
 
 [features]
