--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
 name = "gui-tools"
-version = "0.0.1"
-authors = ["not_a_seagull <jtnunley01@gmail.com>"]
+version = "0.0.2"
+authors = ["notgull <jtnunley01@gmail.com>"]
 edition = "2018"
-repository = "https://github.com/not-a-seagull/gui-tools"
-homepage = "https://github.com/not-a-seagull/gui-tools#readme"
+repository = "https://github.com/notgull/gui-tools"
+homepage = "https://github.com/notgull/gui-tools#readme"
 keywords = ["gui"]
 license = "MIT OR Apache-2.0"
 
