--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,8 +6,10 @@ edition = "2018"
 [dependencies]
 cfg-if = "1"
 chalkboard = { path = "../chalkboard", features = ["breadx", "yaww"] }
+gluten-keyboard = "0.1"
 log = "0.4"
 parking_lot = { version = "0.11.1", optional = true }
+tinyvec = { version = "1.1", features = ["alloc"] }
 
 [dev-dependencies]
 env_logger = { version = "0.8", default-features = false, features = ["atty", "termcolor"] }
